--- a/coeval-simulator/in/config_default.yml
+++ b/coeval-simulator/in/config_default.yml
@@ -1,4 +1,6 @@
 ---
+# MUST have HII_DIM, BOX_LEN, and random_seed parameters
 ic_kwargs:
     user_params: {HII_DIM: 128, BOX_LEN: 128}
     random_seed: 42242
+redshifts: [8.0, 8.5, 9.0]
